--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -24,7 +24,13 @@
         <div class="error_message">{{error}}</div>
     {{/if}}
     <label for="name"><b>Name</b></label>
-    <input class="form_input"  type="text" placeholder="Enter Name and Surname" name="name" />
+    <input class="form_input"  type="text" placeholder="Enter Name" name="name" />
+
+    <label for="last_name"><b>Last Name</b></label>
+    <input class="form_input"  type="text" placeholder="Enter Last Name" name="last_name" />
+
+    <label for="age"><b>Age</b></label>
+    <input class="form_input"  type="text" placeholder="Enter Age" name="age" />
 
     <label for="email"><b>Email</b></label>
     <input class="form_input"  type="email" placeholder="Enter Email" name="email" />
