--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -22,7 +22,7 @@
       <h3 class="info_profile">User Information:</h3>
       <p class="texto_profile">Name: {{user.name}}</p>
       <p class="texto_profile">Email: {{user.email}}</p>
-      <p class="texto_profile">Rol: {{user.rol}}</p>
+      <p class="texto_profile">Role: {{user.role}}</p>
     </div>
   </div>
 </main>
