--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -21,6 +21,7 @@
     <div class="info_container">
       <h3 class="info_profile">User Information:</h3>
       <p class="texto_profile">Name: {{user.name}}</p>
+      <p class="texto_profile">Last Name: {{user.last_name}}</p>
       <p class="texto_profile">Email: {{user.email}}</p>
       <p class="texto_profile">Role: {{user.role}}</p>
     </div>
