--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -640,3 +640,133 @@ footer{
     background-color: white;
 }
 
+
+.btn_cantidad {
+  background-color: #f0f0f0; 
+  border: 1px solid #ddd; 
+  border-radius: 5px; 
+  color: #333; 
+  cursor: pointer; 
+  font-size: 1em; 
+  margin: 0 5px; 
+  padding: 5px 10px; 
+  transition: background-color 0.3s ease; 
+ 
+}
+
+.btn_cantidad:hover {
+  background-color: #e0e0e0; 
+}
+
+.btn_cantidad:active {
+  background-color: #d0d0d0; 
+}
+
+.controls {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+  .table_cart {
+    border-collapse: collapse;
+    font-size: 1rem;
+    font-family: 'Times New Roman', Times, serif;
+    color: #242220;
+    letter-spacing: 0.07em;
+    margin-bottom: 50px;
+    width: 800px;
+    height: 200px;
+}
+
+.table_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+ 
+ .row_cart_p {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.row_cart {
+   border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    background-color: #87a7ae;
+}
+
+.total_price{
+  font-size: 1.2rem;
+  font-weight: lighter;
+  font-family: 'Times New Roman', Times, serif;
+  color: #242220;
+  letter-spacing: 0.07em;
+  margin-bottom: 20px;
+}
+
+.finalizar_compra{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: end;
+  text-align: center;
+  margin-right: 250px;
+}
+
+.shopping_button{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 0.9rem;
+  letter-spacing: 0.5;
+  width: 150px;
+  border: none;
+  background-color: #87a7ae;
+  font-weight:700;
+  cursor: pointer;
+  padding: 9px;
+  border-radius: 5px;
+}
+
+.shopping_button:hover{
+  background-color: #b4b3ad;
+}
+
+.checkout_button{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 0.8rem;
+  letter-spacing: 0.5;
+  width: 80px;
+  border: none;
+  background-color: #87a7ae;
+  font-weight:700;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.checkout_button:hover{
+  background-color: #b4b3ad;
+}
+
+.continue_shopping{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 100px;
+  margin-top: 50px;
+}
+
+.continue_msg{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  letter-spacing: 0.5;
+  margin-bottom: 10px;
+}
+
+
+
