--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -15,29 +15,12 @@
 
 
 .up_page {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #87a7ae;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: #87a7ae;
   }
-  
-  .cart_menu_container {
-    display: flex;
-    flex-direction: column; 
-    align-items: flex-end; 
-  }
-  
-  .cart_icon {
-    display: flex;
-    flex-wrap: wrap;
-    width:35px;
-    margin-top: 20px;
-    margin-right: 50px;
-  }
-  
-
 
 .logo{
     margin: 12px;
@@ -68,21 +51,19 @@ a:hover {
 
   .navbar2{
     display: flex;
-    flex-wrap: wrap;
-    justify-content:flex-start;
-    margin-left: 20px;
+    align-items: center;
 }
 
   .navbar2 a{  
     margin-top: 20px;
     margin-right: 20px;
-    color:#242220;
-    font-size: 1.0em;
+    color: #242220;
+    font-size: 1em;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
-    text-decoration: none; 
-    font-weight:100;
-    letter-spacing: 0.8; 
+    text-decoration: none;
+    font-weight: 100;
+    letter-spacing: 0.8;
 }
 
 a:hover {
@@ -625,14 +606,14 @@ footer{
     font-family: 'Times New Roman', Times, serif;
     font-size: 1rem;
     color: red;
-    background-color: #ffe6e6; /* Color de fondo */
-    padding: 10px; /* Espaciado interno para mayor legibilidad */
+    background-color: #ffe6e6; 
+    padding: 10px; 
     margin-bottom: 10px;
     font-weight: bold;
   }
 
   .error_message:hover {
-    background-color: #ffd6d6; /* Cambio de color al pasar el ratón */
+    background-color: #ffd6d6; 
   }
 
   .custom-icon {
@@ -768,5 +749,36 @@ footer{
   margin-bottom: 10px;
 }
 
+.cart_and_nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 20px;
+}
 
+.cart_menu_container {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+ 
+}
 
+.cart_link {
+  display: flex;
+  align-items: center;
+  text-decoration: none; 
+ 
+}
+
+.cart_icon {
+  width: 35px;
+  margin-right: 10px;
+}
+
+.counter_cart {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1em;
+  color: #242220;
+  margin-bottom: 20px;
+
+}
