--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -4,6 +4,7 @@
     </div>
   </div>
   {{>menu}}
+</header>
 
 <h2 class="cart_main">Cart</h2>
 <input type="text" value="{{cart._id}}" hidden id="cartId" />
