--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -53,7 +53,7 @@
             <p> Category: {{category}}</p>
             <p>Us${{price}}</p>
             <p> Stock: {{stock}}</p>
-            <button class="btn_cart" onclick="buy('{{_id}}')">Add to Cart
+            <button class="btn_cart" onclick="add('{{_id}}')">Add to Cart
             </button>
           </div>
         </div>
@@ -65,7 +65,6 @@
 <footer></footer>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/assets/js/products.js"></script>
 <script src="/assets/js/logout.js"></script>
 
 <script>
