--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -120,7 +120,7 @@ margin: 2rem;
 }
 
 
-table {
+.update_products_table {
     border-collapse: collapse;
     font-size: 1.5rem;
     font-family: 'Times New Roman', Times, serif;
@@ -135,7 +135,7 @@ table {
     justify-content: center;
 }
  
- td {
+.row_realtime_table {
     border: 2px solid black;
     padding: 10px;
     text-align: right;
@@ -655,7 +655,7 @@ footer{
     font-family: 'Times New Roman', Times, serif;
     color: #242220;
     letter-spacing: 0.07em;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     width: 800px;
     height: 200px;
 }
@@ -667,17 +667,14 @@ footer{
 }
  
  .row_cart_p {
-    border: 1px solid black;
+    border: none;
     padding: 10px;
     text-align: center;
     border-radius: 10px;
 }
 
-.row_cart {
-   border: 1px solid black;
-    padding: 10px;
-    text-align: center;
-    background-color: #87a7ae;
+.table_cart tr {
+  border-bottom: 1px solid #242220; 
 }
 
 .total_price{
@@ -739,7 +736,7 @@ footer{
   text-align: center;
   align-items: center;
   margin-bottom: 100px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .continue_msg{
@@ -780,5 +777,25 @@ footer{
   font-size: 1em;
   color: #242220;
   margin-bottom: 20px;
+
+}
+.empty_cart{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  margin-right: 200px;
+}
+
+.empting_button{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 0.8rem;
+  letter-spacing: 0.5;
+  width: 100px;
+  border: none;
+  background-color: #87a7ae;
+  font-weight:700;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 10px;
 
 }
