--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -57,4 +57,5 @@
 <footer></footer>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/assets/js/logout.js"></script>
-<script src="/assets/js/cart.js"></script>
+<script src="/assets/js/cartTotalPrice.js"></script>
+
