vistas ticket en proceso

--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -2,7 +2,6 @@
   <div class="up_page">
     {{>header}}
     </div>
-  </div>
   {{>menu}}
 </header>
 
@@ -40,7 +39,7 @@
 
 <div class="finalizar_compra">
  <h4 class="total_price" id="total_price">Total price:</h4>
- <a href=""><button class="checkout_button">Check out</button></a>
+ <button class="checkout_button" onclick="checkout()">Check out</button>
  </div>
 
 
