--- a/src/views/checkout.handlebars
+++ b/src/views/checkout.handlebars
@@ -7,20 +7,26 @@
 
 <body>
     <main class="main_checkout">
-        
-  <h3>Purchase Detail</h1>
-  <div>
+  <div class="ticket">
+     <h3 class="subtitle_ticket">Purchase Detail</h1>
+    <h2 class="products_ticket">Products:</h2>
+    <ul>
+               {{#each updatedProducts}}
+                    <li>- Product: {{this.product.title}}</li>
+                    <li>- Quantity: {{this.quantity}}</li>
+                    <br>
+                {{/each}}
+    </ul>
+  <h2 class="products_ticket">Ticket Information:</h2>
   <p>Ticket Code: {{ticket.code}}</p>
   <p>Purchaser: {{ticket.purchaser}}</p>
   <p>Total: ${{ticket.amount}}</p>
-  <h2>Products</h2>
-    <ul>
-                {{#each updatedProducts}}
-                    <li>{{ this.product.title }} - Quantity: {{ this.quantity }}</li>
-                {{/each}}
-    </ul>
+  
   </div>
+
+  
   </main>
+  <img class="checkout_gueixa" src="https://i.postimg.cc/d055Ppqd/hand-drawn-asian-cartoon-character-illustration.png" alt="gueixa" width="250">
 </body>
 
 <footer></footer>
