--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -799,36 +799,52 @@ footer{
   border-radius: 10px;
 }
 
-.subtitle_ticket{
+.main_checkout {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center the ticket information */
+  position: relative; /* Allow absolute positioning for the image */
+}
+
+.subtitle_ticket {
   margin-bottom: 20px;
   font-size: 1.5rem;
 }
 
-.ticket{
-  background-color:#d4d0cc;
+.ticket {
+  border: 1px solid #454344;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  align-items: center; 
   margin-top: 50px;
+  padding: 50px; 
   font-family: 'Times New Roman', Times, serif;
-  color:#454344;
-  letter-spacing: 0.8;
-  text-align:right;
+  color: #454344;
+  letter-spacing: 0.8px;
+  text-align: center; 
+  margin-bottom: 80px;
 }
 
-.products_ticket{
+.products_ticket {
   margin-top: 20px;
   font-size: 1.2rem;
   font-family: 'Times New Roman', Times, serif;
 }
+ul {
+  list-style-type: none; 
+  padding: 0; 
+}
 
-.checkout_gueixa{
-  display: flex;
-  flex-wrap: wrap;
-  text-align: right;
-  margin-left: 100px;
+li {
+  margin-left: 0; 
+}
 
+.checkout_gueixa {
+  position: absolute; 
+  bottom: -50; 
+  right: 80; 
 
 }
