--- a/src/views/checkout.handlebars
+++ b/src/views/checkout.handlebars
@@ -22,6 +22,13 @@
       <p>Purchaser: {{ticket.purchaser}}</p>
       <p>Total: ${{ticket.amount}}</p>
     </div>
+
+    <div class="confirm_purchase">
+    <p class="purchase_msg"> Do you confirm this purchase?</p>
+    <a href=""><button class="purchase_button">I do!</button></a>
+</div>
+
+    
     <img class="checkout_gueixa" src="https://i.postimg.cc/q73wfB6z/cute-fox-kitsune-sitting-cartoon-vector-icon-illustration-animal-holiday-icon-concept-isolated-flat.png" alt="gueixa" width="250">
   </main>
 </body>
