--- a/src/views/checkout.handlebars
+++ b/src/views/checkout.handlebars
@@ -6,6 +6,11 @@
 </header>
 
 <body>
+   <div class="confirm_purchase">
+     <p class="purchase_msg">The purchase ticket has been sent to your email.</p>
+      <p class="purchase_msg">You can now proceed to pay.</p>
+      <p class="purchase_msg last">Thank you!<i class="fas fa-heart"></i></p>
+    </div>
   <main class="main_checkout">
     <div class="ticket">
       <h3 class="subtitle_ticket">Purchase Detail</h3>
@@ -23,16 +28,13 @@
       <p>Total: ${{ticket.amount}}</p>
     </div>
 
-    <div class="confirm_purchase">
-    <p class="purchase_msg"> Do you confirm this purchase?</p>
-    <a href=""><button class="purchase_button">I do!</button></a>
-</div>
-
-    
+   
     <img class="checkout_gueixa" src="https://i.postimg.cc/q73wfB6z/cute-fox-kitsune-sitting-cartoon-vector-icon-illustration-animal-holiday-icon-concept-isolated-flat.png" alt="gueixa" width="250">
   </main>
 </body>
 
 <footer></footer>
+
+<script src="/assets/js/logout.js"></script>
 
 
