--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -803,8 +803,8 @@ footer{
   min-height: 70vh;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center the ticket information */
-  position: relative; /* Allow absolute positioning for the image */
+  align-items: center;
+  position: relative; 
 }
 
 .subtitle_ticket {
@@ -819,13 +819,12 @@ footer{
   flex-direction: column;
   justify-content: center;
   align-items: center; 
-  margin-top: 50px;
-  padding: 50px; 
+  margin-bottom: 50px;
+  padding: 30px; 
   font-family: 'Times New Roman', Times, serif;
   color: #454344;
   letter-spacing: 0.8px;
   text-align: center; 
-
 }
 
 .products_ticket {
@@ -855,13 +854,14 @@ li {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  text-align: center;
-  margin: 50px 100px 100px;
+  text-align:center;
+  margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 .purchase_msg{
   font-family: 'Times New Roman', Times, serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   letter-spacing: 0.5;
   margin-right: 20px;
   padding: 8px;
