--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -42,6 +42,11 @@
  <button class="checkout_button" onclick="checkout()">Check out</button>
  </div>
 
+  <div id="loading" style="display: none;">
+        <p>Loading...</p>
+        <!-- Puedes agregar un spinner o una animación de carga aquí -->
+    </div>
+
 
  <div class="continue_shopping">
   <p class="continue_msg"> Or...</p>
