--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -18,9 +18,6 @@
 
   <div class="container_form">
 
-     {{#if error}}
-         <div class="error_message">{{error}}</div>
-    {{/if}}
 
     <label for="email"><b>Email</b></label>
     <input class="form_input" type="email" placeholder="Enter Email" name="email" />
@@ -63,3 +60,19 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const params = new URLSearchParams(window.location.search);
+  const error = params.get('error');
+  
+  if (error) {
+    Swal.fire({
+        imageUrl: "https://i.postimg.cc/g0qCjgXP/icons8-geisha-64-2.png",
+        background: "white",
+        text: error,
+        confirmButtonText: '¡Got it!',
+        confirmButtonColor: "black",
+    });
+  }
+});
+</script>
