--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -14,9 +14,7 @@
   </div>
 
   <div class="container_form">
-    {{#if error}}
-      <div class="error_message">{{error}}</div>
-    {{/if}}
+
     <label for="name"><b>Name</b></label>
     <input class="form_input" type="text" placeholder="Enter Name" name="name"  />
 
@@ -48,3 +46,20 @@
 
 <script src="/assets/js/register.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const params = new URLSearchParams(window.location.search);
+  const error = params.get('error');
+  
+  if (error) {
+    Swal.fire({
+        imageUrl: "https://i.postimg.cc/g0qCjgXP/icons8-geisha-64-2.png",
+        background: "white",
+        text: error,
+        confirmButtonText: '¡Got it!',
+        confirmButtonColor: "black",
+    });
+  }
+});
+</script>
