--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -714,15 +714,16 @@ footer{
 
 .checkout_button{
   font-family: 'Times New Roman', Times, serif;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   letter-spacing: 0.5;
-  width: 80px;
+  width: 100px;
   border: none;
   background-color: #87a7ae;
   font-weight:700;
   cursor: pointer;
-  padding: 8px;
-  border-radius: 10px;
+  padding: 9px;
+  border-radius: 5px;
+  margin-bottom: 15px;
 }
 
 .checkout_button:hover{
@@ -736,7 +737,7 @@ footer{
   text-align: center;
   align-items: center;
   margin-bottom: 100px;
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 .continue_msg{
