--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -53,7 +53,7 @@ document.addEventListener('DOMContentLoaded', function() {
         imageUrl: "https://i.postimg.cc/ZqrV8yL4/cat.png",
         background: "white",
         text: message,
-        confirmButtonText: '¡Got it!',
+        confirmButtonText: "OK",
         confirmButtonColor: "black",
     });
   }
@@ -70,9 +70,10 @@ document.addEventListener('DOMContentLoaded', function() {
         imageUrl: "https://i.postimg.cc/g0qCjgXP/icons8-geisha-64-2.png",
         background: "white",
         text: error,
-        confirmButtonText: '¡Got it!',
+        confirmButtonText: "OK",
         confirmButtonColor: "black",
     });
   }
 });
 </script>
+
