usuarios premium, rutas, etc

--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -111,7 +111,8 @@ document.addEventListener('DOMContentLoaded', function() {
   if (message) {
     Swal.fire({
         imageUrl: "https://i.postimg.cc/HxxyqCyh/icons8-goblin-96.png",
-        background: "white",
+        background: "#87a7ae",
+        color:"black",
         text: message,
         confirmButtonText: '¡OK!',
         confirmButtonColor: "black",
