--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -30,6 +30,10 @@
 </div>
   </div>
 </form>
+<div class="recover_password">
+    <p class="recover_msg_login"> Want to recover your password?</p>
+    <a href="/recoverMail"><button class="recover_message_button">Recover password</button></a>
+</div>
 
 <div class="registration_login">
     <p class="register_msg"> Not registered yet?</p>
