--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -32,7 +32,7 @@
 </form>
 <div class="recover_password">
     <p class="recover_msg_login"> Want to recover your password?</p>
-    <a href="/recoverMail"><button class="recover_message_button">Recover password</button></a>
+    <a href="/recoverPassword"><button class="recover_message_button">Recover password</button></a>
 </div>
 
 <div class="registration_login">
