--- a/src/views/recoverPassword.handlebars
+++ b/src/views/recoverPassword.handlebars
@@ -5,11 +5,9 @@
   {{>menu}}
 </header>
 
- <input type="hidden" name="token" value="{{token}}">
 <main class="recover_email">
   <p class="recover_msg">Please enter your email to recover password</p>
-  <form onsubmit="recoverEmail(event)" id="formRecoverEmail" action="/api/sessions/requestPassword" method="post">
-   
+  <form id="formRecoverEmail">
     <div class="container_form_recover">
       <label for="email"><b>Enter your email</b></label>
       <input class="form_input" type="email" placeholder="Enter Email" name="email" />
@@ -22,5 +20,5 @@
 
 <footer></footer>
 
-<script src="/assets/js/recoverEmail.js"></script>
+<script src="/assets/js/recoverPassword.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
