--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,7 +6,7 @@
   {{>menu}}
 
 
-  <h1 class="titulo">Horisada´s Paintings</h1>
+  <h1 class="titulo">Horisada's Paintings</h1>
   <h4 class="greeting">いらっしゃいませ</h4>
 </header>
 
