--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -6,7 +6,7 @@
 </header>
 
 <main class="recover_email">
-  <p class="recover_msg">Please enter your new password. It must be different from the previous one.</p>
+  <p class="recover_msg">Please enter your new password. It must be different from your previous one.</p>
   <form id="formResetPassword" action="/api/sessions/reset-password" method="post">
     <input type="hidden" name="token" value="{{token}}" />
     <div class="container_form_recover">
