--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -8,7 +8,7 @@
 
    <div id="messageContainer"></div>
 
-  <h1 class="titulo"> Horisada´s Paintings </h1>
+  <h1 class="titulo"> Horisada's Paintings </h1>
 
   <div class="div_space"></div>
 
