--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -5,7 +5,7 @@
   </div>
   {{>menu}}
 
-  <h1 class="titulo"> Horisada´s Paintings </h1>
+  <h1 class="titulo"> Horisada's Paintings </h1>
   <hr />
   <hr />
 </header>
