--- a/src/views/recoverPassword.handlebars
+++ b/src/views/recoverPassword.handlebars
@@ -6,7 +6,7 @@
 </header>
 
 <main class="recover_email">
-  <p class="recover_msg">Please enter your email to recover password</p>
+  <p class="recover_msg">Please enter your email address to recover your password.</p>
   <form id="formRecoverEmail">
     <div class="container_form_recover">
       <label for="email"><b>Enter your email</b></label>
