--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -26,19 +26,25 @@
   <hr>
 
   <div>
+    <input type="text" value="{{user._id}}" hidden id="userId" />
      <h4 class="info_documents">Dear {{user.name}}, you can use the following form to upload your documents:</h2>
-     <form onsubmit="uploadDoctuments(event)" id="formDocuments" action="/api/users/:uid/documents" method="post">
+     <form onsubmit="uploadDocuments(event)" id="formDocuments" action="/api/users/{{user._id}}/documents" method="post" enctype="multipart/form-data">
 
   <div class="container_form_documents">
 
     <label for="email"><b>Email</b></label>
-    <input class="form_input" type="email" placeholder="Enter Email" name="email" />
-
-    <label for="password"><b>Password</b></label>
-    <input  class="form_input"  type="password" placeholder="Enter Password" name="password" />
+    <input class="form_input" type="email" placeholder="Please complete your email..." name="email" />
+  <label for="ID">Upload your ID:</label>
+  <input type="file" id="ID" name="ID" />
+  
+  <label for="proof-of-address">Upload your Proof of address:</label>
+  <input type="file" id="proof-of-address" name="Proof of address" />
+  
+  <label for="account-statement">Upload your account statement:</label>
+  <input type="file" id="account-statement" name="Account statement" />
 
    <div class="button-container">
-  <button class="button_form" type="submit" >Send Docs</button>
+  <button class="button_form" type="submit" value="upload" >Send Docs</button>
 </div>
   </div>
 </form>
@@ -50,3 +56,4 @@
 <footer></footer>
 
 <script src="/assets/js/logout.js"></script>
+<script src="/assets/js/documents.js"></script>
