--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -32,8 +32,7 @@
 
   <div class="container_form_documents">
 
-    <label for="email"><b>Email</b></label>
-    <input class="form_input" type="email" placeholder="Please complete your email..." name="email" />
+   
   <label for="ID">Upload your ID:</label>
   <input type="file" id="ID" name="ID" />
   
@@ -55,5 +54,6 @@
 
 <footer></footer>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/assets/js/logout.js"></script>
 <script src="/assets/js/documents.js"></script>
