--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -27,26 +27,28 @@
 
   <div>
     <input type="text" value="{{user._id}}" hidden id="userId" />
-    <h4 class="title_documents"> Not a premium user yet ?</h4>
-     <p class="info_documents">Dear {{user.name}}, if you wish to upgrade your role to premium you can use the form below to upload the 3 documents. If you already have a premium role and need to replace any document, you can use the same form. Please notice they must have a PDF extension.</p>
+    <h4 class="title_documents"> Not premium  yet ?</h4>
+     <p class="info_documents">Dear {{user.name}}, if you wish to upgrade your role to premium you can use the form below to upload your ID, Proof of address and Account statement. If you already have a premium role and need to update any document, you can use the same form. Please notice they must have a PDF extension.</p>
      <form onsubmit="uploadDocuments(event)" id="formDocuments" action="/api/users/{{user._id}}/documents" method="post" enctype="multipart/form-data">
   <div class="container_form_documents">
     <label for="ID">ID:</label>
     <input type="file" id="ID" name="ID" style="display: none;" />
-    <button type="button" class="custom-file-upload" onclick="document.getElementById('ID').click();">Choose File</button>
+    <button type="button" class="custom-file-upload" data-input-id="ID">Choose File</button>
 
     <label for="proof-of-address">Proof of address:</label>
     <input type="file" id="proof-of-address" name="Proof of address" style="display: none;" />
-    <button type="button" class="custom-file-upload" onclick="document.getElementById('proof-of-address').click();">Choose File</button>
+     <button type="button" class="custom-file-upload" data-input-id="proof-of-address">Choose File</button>
+
 
     <label for="account-statement">Account statement:</label>
     <input type="file" id="account-statement" name="Account statement" style="display: none;" />
-    <button type="button" class="custom-file-upload" onclick="document.getElementById('account-statement').click();">Choose File</button>
-
-    <div class="button-container">
-      <button class="button_form" type="submit">Send Docs</button>
-    </div>
+    <button type="button" class="custom-file-upload" data-input-id="account-statement">Choose File</button>
+</div>
+    
   </div>
+  <div class="button-container">
+      <button class="button_upload_form" type="submit">Send Docs</button>
+    </div>
 </form>
 </div>
 </main>
