empiezo vistas manage users

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -12,7 +12,7 @@
 
 <main class="back_style_realtime">
 
-  <h2 class="subtitulo"> Update Products </h2>
+  <h2 class="subtitulo"> Manage Products </h2>
 
   <div class="pagination">
     <ul>
