--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -1078,5 +1078,14 @@ li {
     letter-spacing: 0.05em;
 
   }
+
+  .manage_users_table {
+    border-collapse: collapse;
+    font-size: 1.3rem;
+    font-family: 'Times New Roman', Times, serif;
+    color: #242220;
+    letter-spacing: 0.07em;
+    margin-bottom: 50px;
+}
   
   
