--- a/src/views/partials/menu.handlebars
+++ b/src/views/partials/menu.handlebars
@@ -1,6 +1,7 @@
 <nav class="navbar">
   <a href="/home">Home</a>
   <a href="/products">Products</a>
-  <a href="/realtimeproducts">Update Products</a>
+  <a href="/realtimeproducts">Manage Products</a>
+  <a href="/manageusers">Manage Users</a>
   <a href="/chat">Chat</a>
 </nav>
