--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -6,6 +6,8 @@
   {{>menu}}
 </header>
 
+<main>
+
 <div class="welcome_profile">
     <div class="subtitle_and_image_container">
       <h2 class="subtitle_profile">Hello, {{user.name}}!</h2>
