--- a/src/views/manageusers.handlebars
+++ b/src/views/manageusers.handlebars
@@ -1,3 +1,11 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMU87IpT4vG2Q0Dzt4JXLwP7dBOkce5Bvb+Rs1"
+  crossorigin="anonymous"
+/>
+
+
 <header>
   <div class="up_page">
     {{>header}}
@@ -24,6 +32,7 @@
           <th>Documents</th>
           <th>Last Connection</th>
           <th>Change Role</th>
+          <th>Remove User</th>
         </tr>
       </thead>
       <tbody id="users">
@@ -34,16 +43,17 @@
             <td class="row_realtime_table">{{role}}</td>
             <td class="row_realtime_table">{{status}}</td>
             <td class="row_realtime_table">{{last_connection}}</td>
-            <td class="row_realtime_table"> <button>Change Role</button></td>  
+            <td class="row_realtime_table"> <button class="users_button"><i class="fas fa-exchange-alt"></button></td> 
+            <td class="row_realtime_table"> <button class="users_button"><i class="fas fa-trash-alt"></i></button></td>
           </tr>
         {{/each}}
       </tbody>
     </table>
   </div>
 
-  <div class="registration_login">
-    <p class="register_msg"> Would you like to remove inactive users?</p>
-    <a href="/register"><button class="register_login_button">Delete</button></a>
+  <div class="delete_users_container">
+    <p class="delete_users_msg"> Would you like to remove all inactive users?</p>
+    <a href="/register"><button class="delete_users_button">Delete</button></a>
 </div>
 
 
