--- a/src/views/partials/menu.handlebars
+++ b/src/views/partials/menu.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a href="/home">Home</a>
+  <a href="/">Home</a>
   <a href="/products">Products</a>
   <a href="/realtimeproducts">Manage Products</a>
   <a href="/manageusers">Manage Users</a>
